<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormularioActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/age_txt"/>
        <Spinner
            android:id="@+id/spinner_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/liked"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/rb_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"/>
            <RadioButton
                android:id="@+id/rb_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"/>
            <RadioButton
                android:id="@+id/rb_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"/>
            <RadioButton
                android:id="@+id/rb_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"/>
            <RadioButton
                android:id="@+id/rb_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/buy"/>
        <CheckBox
            android:id="@+id/cb_lacteos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lacteos"
            />
        <CheckBox
            android:id="@+id/cb_carnes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carnes"
            />
        <CheckBox
            android:id="@+id/cb_verduras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verduras"
            />
        <CheckBox
            android:id="@+id/cb_frutas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frutas"
            />
        <CheckBox
            android:id="@+id/cb_embasados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/embasados"
            />
        <CheckBox
            android:id="@+id/cb_panaderia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pan"
            />
    </LinearLayout>
    <Button
        android:id="@+id/but_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"/>



</LinearLayout>