<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ProductoActivity"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/p_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sample"
        android:layout_gravity="center"
        android:textSize="75sp"/>
    <TextView
        android:id="@+id/p_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_sample"
        android:layout_gravity="center"
        android:textSize="50sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:foregroundGravity="bottom"
        android:layout_gravity="center">
        <Button
            android:id="@+id/but_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"/>
        <Button
            android:id="@+id/but_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>